Revision history for {{$dist->name}}

{{$NEXT}}

0.015     2014-06-20 03:36:33Z
          - adjusted packaging and tests to become perl-5.6 friendly,
            including only using core or dual-lifed prerequisites

0.014     2014-03-01 22:08:26Z
          - fix test that was failing when FOO or BAR environment variables
            were set (RT#93447)

0.013     2013-12-14 21:26:06Z
          - update configure_requires checking in Makefile.PL

0.012     2013-10-14 16:54:47Z
          - re-release to fix t/00-report-prereqs.t use of
            CPAN::Meta::Requirements

0.011     2013-10-12 22:15:02Z
          - unnecessary tests removed; CONTRIBUTING file added

0.010     2013-09-25 03:29:53Z
          - re-release with fixed compile test

0.009     2013-09-11 04:49:55Z
          - fixed error in synopsis (we do not export anything by default)
          - a caveat added to the documentation regarding embedding warning
            checks inside another sub (this is for you, ribasushi!!!)
          - ':no_end_test' now also covers side effects of done_testing, as
            well as END blocks, making it possible to use the warning(s) subs
            without having an end warning test while using done_testing
            (necessary when combining with the 'if' pragma)

0.008     2013-07-14 19:02:01Z
          - compile test updated, to hopefully fix mswin32 parsing issues

0.007     2013-07-09 22:10:36Z
          - fix subtest tests to work on Test::More before 0.95_01
            (RT#86802)

0.006     2013-06-21 00:53:54Z
          - remove use of Class::Method::Modifiers

0.005     2013-06-20 19:18:42Z
          - new feature: warnings { code } and warning { code }, for capturing
            the contents of warnings for subsequent testing

0.004     2013-05-21 21:58:55Z
          - when allowing warnings (via allow_warnings()), messages are
            emitted via note() rather than warn(), for less noisy output when
            running in a harness
