@@ -32,3 +32,27 @@ module = Test::Tester
 [MetaResources]
 x_IRC = irc://irc.perl.org/#perl-qa
 x_MailingList = http://lists.perl.org/list/perl-qa.html
+
+; TODO: use an xt filefinder with [AutoPrereqs]
+[Prereqs / DevelopRequires]
+Test::Deep = 0
+Test::NoWarnings = 0
+
+; copy the (passing) example scripts into xt for additional test coverage
+[GenerateFile / synopsis_1]
+filename = xt/author/examples_synopsis_1.t
+content_is_template = 1
+content = # generated from examples/synopsis_1.t
+content = {{ use Path::Tiny; path('examples/synopsis_1.t')->slurp_raw; }}
+
+[GenerateFile / synopsis_2]
+filename = xt/author/examples_synopsis_2.t
+content_is_template = 1
+content = # generated from examples/synopsis_2.t
+content = {{ use Path::Tiny; path('examples/synopsis_2.t')->slurp_raw; }}
+
+[GenerateFile / test_warning_contents]
+filename = xt/author/examples_test_warning_contents.t
+content_is_template = 1
+content = # generated from examples/test_warning_contents.t
+content = {{ use Path::Tiny; path('examples/test_warning_contents.t')->slurp_raw; }}
