@@ -1,3 +1,0 @@
-use strict;
-use warnings FATAL => 'all';
-do 'examples/synopsis_1.t';
