@@ -1,4 +1,0 @@
-use strict;
-use warnings FATAL => 'all';
-do 'examples/synopsis_2.t';
-
