@@ -1,3 +1,0 @@
-use strict;
-use warnings FATAL => 'all';
-do 'examples/test_warning_contents.t';
